--- a/Views/MenuWindow.xaml
+++ b/Views/MenuWindow.xaml
@@ -6,9 +6,9 @@
              xmlns:local="clr-namespace:ProgettoInformatica.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Button Content="Gioca" FontSize="50" HorizontalAlignment="Left" VerticalAlignment="Center" Width="137" Height="85" Background="Transparent" BorderThickness="0" Margin="344,0,0,0" Click="Button_Click"/>
-        <Image Source="./Img/play.png" HorizontalAlignment="Left" Height="30" Margin="451,0,0,0" VerticalAlignment="Center" Width="32"/>
+    <Grid Background="Salmon" RenderTransformOrigin="0.524,0.5">
+        <Button Content="Gioca" FontSize="50" HorizontalAlignment="Left" VerticalAlignment="Top" Width="137" Height="85" Background="Transparent" BorderThickness="0" Margin="314,177,0,0"/>
+        <Image Source="./Img/play.png" HorizontalAlignment="Left" Height="48" Margin="451,0,0,0" VerticalAlignment="Center" Width="42"/>
         <Button  HorizontalAlignment="Left" VerticalAlignment="Center" Background="Transparent" BorderThickness="0" Height="30" Width="30" Margin="760,0,0,0">
             <Image Source="./Img/shopping-cart.png"></Image>
         </Button>
