--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -19,6 +19,9 @@
             <DataTemplate DataType="{x:Type viewModel:ShopWindowViewModel}">
                 <Views:ShopWindow/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModel:SaveWindowViewModel}">
+                <Views:SaveWindow/>
+            </DataTemplate>
         </ContentControl.Resources>
     </ContentControl>
 
