--- a/Views/GameWindow.xaml
+++ b/Views/GameWindow.xaml
@@ -21,7 +21,7 @@
                                     <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)" Duration="0:0:5" >
                                         <EasingDoubleKeyFrame KeyTime="0:0:2" Value="200"/>
                                         <EasingDoubleKeyFrame KeyTime="0:0:3" Value="200"/>
-                                        <EasingDoubleKeyFrame KeyTime="0:0:4" Value="0"/>
+                                        <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0" KeySpline="0.0,1.0 0.5,0.4"/>
                                     </DoubleAnimationUsingKeyFrames>
 
                                 </Storyboard>
@@ -218,6 +218,14 @@
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="ForceCursor" Value="True"/>
                             <Setter Property="Cursor" Value="Hand"/>
+                          <!--<Trigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Duration="0:0:2" Storyboard.TargetProperty="Width" From="400" To="500" />
+                                        <DoubleAnimation Duration="0:0:2" Storyboard.TargetProperty="Height" From="50" To="80" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.EnterActions>-->
                         </Trigger>
                             
                     </Style.Triggers>
