--- a/Views/SoundWindow.xaml
+++ b/Views/SoundWindow.xaml
@@ -33,7 +33,7 @@
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Column="1" Text="{Binding Giocatore.MazziPosseduti.Count, StringFormat='Mazzi Posseduti {0}/10'}" FontSize="13" VerticalAlignment="Bottom" Margin="0 0 0 10"/>
         <StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom" Margin="0 0 0 30">
-            <TextBlock Text="Regola il Volume:" Margin="0 0 0 10"/>
+            <TextBlock Text="Regola il Volume:" Margin="0 0 0 10" HorizontalAlignment="Left"/>
             <Slider Maximum="100" />
         </StackPanel>
 
